--- a/_posts/2020-08-25-Sale.markdown
+++ b/_posts/2020-08-25-Sale.markdown
@@ -9,5 +9,5 @@ color2: Blue
 image3: 2_3
 color3: Red
 price: 300 
-form_link: https://forms.gle/Y1Efb3gemr5gTvus8
+form_link: https://forms.gle/AvRhTFzsAMYAUVVFA
 ---
