--- a/_posts/2020-08-26-Sale.markdown
+++ b/_posts/2020-08-26-Sale.markdown
@@ -9,5 +9,5 @@ color2: Blue
 image3: 3_3
 color3: Red
 price: 300 
-form_link: https://forms.gle/yfyMjpF37xTCt5S67
+form_link: https://forms.gle/6Cf2wfCASHzmz3fQ6
 ---
