Some more changes

--- a/_posts/2020-08-24-Sale.markdown
+++ b/_posts/2020-08-24-Sale.markdown
@@ -9,5 +9,5 @@ color2: Blue
 image3: 1_3
 color3: Red
 price: 300 
-form_link: https://forms.gle/4gEwLX66emAF2xzm7
+form_link: 1FAIpQLScl4Q5ohWkpjTgqZ9vwCavlYS0llezrVwDdvqhuE4Fip5Wcwg
 ---
