--- a/_posts/2020-08-24-Sale.markdown
+++ b/_posts/2020-08-24-Sale.markdown
@@ -10,4 +10,5 @@ image3: 1_3
 color3: Red
 price: 300 
 form_link: 1FAIpQLScl4Q5ohWkpjTgqZ9vwCavlYS0llezrVwDdvqhuE4Fip5Wcwg
+productcode: AUG002
 ---
