--- a/_posts/2020-08-25-Sale.markdown
+++ b/_posts/2020-08-25-Sale.markdown
@@ -10,4 +10,5 @@ image3: 2_3
 color3: Red
 price: 300 
 form_link: 1FAIpQLSfMdrLNHELm2hRAjzEGBXGSfh9XKynCFBBUbIWtG8VvmOnydg
+productcode: AUG003
 ---
